Revert "poprawa kontrolerów i dokumentacja"
This reverts commit 5aa438499448bc80548c115adc0417cc418106b5.
